[package]
name = "mybtree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
lru = "0.12"
reedline = "0.40"
rkyv = "0.8.14"
sqlparser = "0.55"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.2"
tempfile = "3.24.0"

[[bench]]
name = "btree"
harness = false
