[package]
name = "mybtree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5", features = ["derive"] }
lru = "0.16"
reedline = "0.45.0"
rkyv = "0.8.14"
sqlparser = "0.61"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.10.0"
tempfile = "3.25.0"

[[bench]]
name = "btree"
harness = false
